<resources>
    <string name="app_name">fren</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app">About App</string>
    <string name="about_emotion">About Emotion</string>
    <string name="emotion_analysis">Emotion Analysis</string>
    <string name="take_photo">Take Photo</string>
    <string name="analyze_emotion">Analyze Emotion</string>
    <string name="upload_image">Upload Image</string>
</resources>