<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emotion_analysis"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/emotion_analysis" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_app" />
        <item
            android:id="@+id/nav_about_emotion"
            android:icon="@drawable/ic_menu_emotion"
            android:title="@string/about_emotion" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_menu_policy"
            android:title="@string/privacy_policy" />

    </group>
</menu>